infrastructure/gateway/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: portfolio-gateway
  namespace: portfolio-prod
  annotations:
    networking.gke.io/certmap: portfolio-certmap
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  # HTTP listener
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  # HTTPS listener  
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: portfolio-prod-cert,sonarqube-cert
